# pyproject.toml
[project]
name = "railway-bottle-template"
version = "1.0.0"
description = "A minimal Bottle web application template for Railway"
requires-python = ">=3.13"
dependencies = ["bottle>=0.13.3", "gunicorn>=23.0.0"]

[tool.setuptools]
py-modules = ["main"]

[tool.black]
line-length = 160
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
